# silicon_agent

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  README.md  SITC_Agent管理平台前后端设计方案_v1.0.md  SITC_数字员工集群完整设计方案_v1.0.docx  SITC_数字员工集群完整设计方案_v1.0.md  SITC_硅基Agent战略演进白皮书_v1.0.md  SITC_硅基Agent技术落地方案_v1.0.md  SITC_硅基Agent行业洞察与商业化路径_v1.0.md  package-lock.json  package.json
platform/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
platform/alembic/: env.py
platform/app/: config.py  dependencies.py  logging_config.py  main.py
platform/sandbox/: Dockerfile.base  Dockerfile.coding  agent_server.py  requirements.txt  tool_policy.py
platform/scripts/: e2e_control_plane.py  seed_github_security_agent.py  selective_verify.py  verify_harness.py
platform/tests/: conftest.py  test_agents.py  test_agents_api.py  test_api_health.py  test_audit_and_circuit_breaker.py  test_audit_api.py  test_circuit_breaker_api.py  test_compressor.py  test_datetime_timezone_guard.py  test_e2e_control_plane.py  test_e2e_workflow.py  test_engine_core.py  test_engine_gates.py  test_engine_helpers.py  test_engine_role_sandbox.py  test_engine_sandbox_fallback.py  test_engine_stage_execution.py  test_engine_system_logs.py  test_engine_task_lifecycle.py  test_engine_worktree_and_workspace.py  test_engine_worktree_setup.py  test_evaluator.py  test_event_collector.py  test_executor_stage_logs.py  test_gate_service.py  test_gates_api.py  test_harness_loop.py  test_integration_api.py  test_integration_service.py  test_kpi_api.py  test_kpi_service.py  (+46 more)
(+286 files in other folders)
